# cli_to_do

./: .gitignore  Cargo.toml  default.toml
src/: command.rs  constants.rs  main.rs  menu.rs  task.rs  task_list.rs  utils.rs
