[package]
name = "cli_to_do"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
config-rs = "0.1.3"
confy = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.20.0", features = ["v4"] }
config = "0.15.19"
